# Vac-Module-dumper

./: .gitignore  CMakeLists.txt  README.md  VacDumper.sln  VacDumper.vcxproj  VacDumper.vcxproj.filters  detours.cpp  detours.h  dllmain.cpp  framework.h  hook.h  hooks.cpp  hooks.h  icekey.cpp  icekey.h  module_utils.cpp  module_utils.h  util.h  vacstructs.h
Ida Scripts/: Imports_Fix.py  Vac_vars.py
